# carbond

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md
carbond/: Cargo.toml
carbond-client/: Cargo.toml
carbond-client/examples/: carbon_emission.rs  carbon_emission_mock.rs  cpu_embodied_emission.rs
carbond-client/src/: lib.rs  power_supply.rs
carbond-client/src/embodied/: cpu.rs
carbond-lib/: Cargo.toml
carbond-lib/src/: constants.rs  fs.rs  lib.rs  metrics.rs
carbond-lib/src/metrics/: carbon_intensity.rs  cpu_cycles.rs  metric.rs
carbond/src/: api.rs  config.rs  errors.rs  fs.rs  lib.rs  main.rs  scheduler.rs
carbond/src/data/: api.rs  config.rs  mod.rs  state.rs
carbond/src/data/config/: external.rs  internal.rs
